--- a/template/package.json
+++ b/template/package.json
@@ -29,12 +29,17 @@
     "css-loader": "^0.23.0",
     {{#lint}}
     "eslint": "^2.0.0",
-    "eslint-config-standard": "^5.1.0",
     "eslint-friendly-formatter": "^1.2.2",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.3.0",
+    {{#if_eq lintConfig "standard"}}
+    "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.3.2",
+    {{/if_eq}}
+    {{#if_eq lintConfig "airbnb"}}
+    "eslint-config-airbnb": "^6.2.0",
+    {{/if_eq}}
     {{/lint}}
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
