--- a/template/package.json
+++ b/template/package.json
@@ -7,9 +7,13 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    {{#unit}}
     "unit": "karma start test/unit/karma.conf.js --single-run",
+    {{/unit}}
+    {{#e2e}}
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e"{{#lint}},
+    {{/e2e}}
+    "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{#lint}},
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"{{/lint}}
   },
   "dependencies": {
@@ -22,10 +26,7 @@
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "chai": "^3.5.0",
-    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
-    "cross-spawn": "^2.1.5",
     "css-loader": "^0.23.0",
     {{#lint}}
     "eslint": "^2.0.0",
@@ -48,9 +49,8 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.12.0",
-    "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    {{#unit}}
     "karma": "^0.13.15",
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
@@ -61,13 +61,21 @@
     "karma-webpack": "^1.7.0",
     "lolex": "^1.4.0",
     "mocha": "^2.4.5",
-    "nightwatch": "^0.8.18",
-    "ora": "^0.2.0",
-    "phantomjs-prebuilt": "^2.1.3",
-    "selenium-server": "2.53.0",
-    "shelljs": "^0.6.0",
+    "chai": "^3.5.0",
     "sinon": "^1.17.3",
     "sinon-chai": "^2.8.0",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    {{/unit}}
+    {{#e2e}}
+    "chromedriver": "^2.21.2",
+    "cross-spawn": "^2.1.5",
+    "nightwatch": "^0.8.18",
+    "selenium-server": "2.53.0",
+    {{/e2e}}
+    "ora": "^0.2.0",
+    "shelljs": "^0.6.0",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
