--- a/template/package.json
+++ b/template/package.json
@@ -29,8 +29,8 @@
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     {{#lint}}
-    "eslint": "^2.0.0",
-    "eslint-friendly-formatter": "^1.2.2",
+    "eslint": "^2.10.2",
+    "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^1.3.0",
     {{#if_eq lintConfig "standard"}}
@@ -39,7 +39,8 @@
     "eslint-plugin-standard": "^1.3.2",
     {{/if_eq}}
     {{#if_eq lintConfig "airbnb"}}
-    "eslint-config-airbnb": "^6.2.0",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.1",
     {{/if_eq}}
     {{/lint}}
     "eventsource-polyfill": "^0.9.6",
