--- a/template/package.json
+++ b/template/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
+    {{#lint}}
+    "babel-eslint": "^6.1.2",
+    {{/lint}}
     "babel-loader": "^6.0.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
