--- a/template/package.json
+++ b/template/package.json
@@ -17,10 +17,11 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.0.0-rc.3",
+    "vue": "^2.0.0-rc.4",
     "babel-runtime": "^6.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     {{#lint}}
     "babel-eslint": "^6.1.2",
