Some extra cleaning (#287)

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -2,6 +2,10 @@
 node_modules/
 dist/
 npm-debug.log
-selenium-debug.log
+{{#unit}}
 test/unit/coverage
+{{/unit}}
+{{#e2e}}
 test/e2e/reports
+selenium-debug.log
+{{/e2e}}
