Update Vue version from 2.0.0-rc.8 to 2.0.1 (#291)

--- a/template/package.json
+++ b/template/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.0.0-rc.8"
+    "vue": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
