Adding vue-style-loader (#290)
Fresh install throws error on `npm run dev`:

```
ERROR in ./src/App.vue
Module not found: Error: Cannot resolve module 'vue-style-loader'
```

--- a/template/package.json
+++ b/template/package.json
@@ -84,6 +84,7 @@
     "shelljs": "^0.7.4",
     "url-loader": "^0.5.7",
     "vue-loader": "^9.4.0",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
