Add an option for vue-router (#415)
* adding a router option

* don't turn on history mode automatically

--- a/template/package.json
+++ b/template/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/lint}}
   },
   "dependencies": {
-    "vue": "^2.1.10"
+    "vue": "^2.1.10"{{#router}},
+    "vue-router": "^2.1.1"{{/router}}
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
