--- a/template/package.json
+++ b/template/package.json
@@ -82,6 +82,7 @@
     {{/e2e}}
     "semver": "^5.3.0",
     "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.7",
