--- a/template/package.json
+++ b/template/package.json
@@ -29,6 +29,7 @@
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     {{#lint}}
     "eslint": "^3.14.1",
@@ -84,7 +85,7 @@
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
-    "shelljs": "^0.7.6",
+    "rimraf": "^2.6.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.0.0",
     "vue-style-loader": "^2.0.0",
