fix missing comma

--- a/template/package.json
+++ b/template/package.json
@@ -92,7 +92,7 @@
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
-    "portfinder": "^1.0.13"
+    "portfinder": "^1.0.13",
     "webpack": "^3.5.5",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
