Fix Unknown plugin istanbul error when no unit test (#785)
* Fix Unknown plugin istanbul error when no unit test

* simplify handlebars conditionals.

--- a/template/.babelrc
+++ b/template/.babelrc
@@ -11,8 +11,9 @@
   "plugins": ["transform-runtime"],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"],
+      "presets": ["env", "stage-2"]{{#unit}},
       "plugins": ["istanbul"]
+      {{/unit}}
     }
   }
 }
