Revert "Fix Unknown plugin istanbul error when no unit test (#785)" (#1035)
This reverts commit 14f2a92a64dcb5919a8adaf68fe763360b5999c3.

--- a/template/.babelrc
+++ b/template/.babelrc
@@ -11,9 +11,8 @@
   "plugins": ["transform-runtime"],
   "env": {
     "test": {
-      "presets": ["env", "stage-2"]{{#unit}},
+      "presets": ["env", "stage-2"],
       "plugins": ["istanbul"]
-      {{/unit}}
     }
   }
 }
