--- a/template/package.json
+++ b/template/package.json
@@ -127,6 +127,7 @@
     },
     "setupFiles": ["<rootDir>/test/unit/setup"],
     "mapCoverage": true,
+    "coverageDirectory": "<rootDir>/test/unit/coverage",
     "collectCoverageFrom" : [
       "src/**/*.{js,vue}",
       "!src/main.js",
