--- a/template/package.json
+++ b/template/package.json
@@ -96,6 +96,7 @@
     "nightwatch": "^0.9.12",
     "selenium-server": "^3.0.1",
     {{/e2e}}
+    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
