--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "{{ name }}",
+  "name": "dk-fe",
   "version": "1.0.0",
   "description": "{{ description }}",
-  "author": "{{ author }}",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
