--- a/template/package.json
+++ b/template/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "iview": "^3.2.1",
     "vue": "^2.5.2",
+    "vuex": "^3.1.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
