--- a/template/package.json
+++ b/template/package.json
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vuex": "3.0.1",
     "vue-router": "^3.0.1",
     "axios": "^0.18.0",
+    "js-cookie": "2.2.0",
     "iview": "^3.2.1"
   },
   "devDependencies": {
