--- a/template/package.json
+++ b/template/package.json
@@ -22,8 +22,9 @@
     "vuex": "3.0.1",
     "vue-router": "^3.0.1",
     "axios": "^0.18.0",
-    "js-cookie": "2.2.0",
-    "iview": "^3.2.1"
+    "iview": "^3.2.1",
+    "element-ui": "2.4.6",
+    "js-cookie": "2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
