--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,8 @@
     "axios": "^0.18.0",
     "iview": "^3.2.1",
     "element-ui": "2.4.6",
-    "js-cookie": "2.2.0"
+    "js-cookie": "2.2.0",
+    "nprogress": "0.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
