--- a/template/package.json
+++ b/template/package.json
@@ -25,7 +25,9 @@
     "iview": "^3.2.1",
     "element-ui": "2.4.6",
     "js-cookie": "2.2.0",
-    "nprogress": "0.2.0"
+    "nprogress": "0.2.0",
+    "path-to-regexp": "2.4.0",
+    "fuse.js": "3.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
