--- a/template/package.json
+++ b/template/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vuex": "3.0.1",
     "vue-router": "^3.0.1",
+    "vue-i18n": "7.3.2",
     "axios": "^0.18.0",
     "iview": "^3.2.1",
     "element-ui": "2.4.6",
