--- a/template/package.json
+++ b/template/package.json
@@ -73,6 +73,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mocha": "^3.2.0",
+    "mockjs": "^1.0.1-beta3",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
