--- a/template/package.json
+++ b/template/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "admin-tpl",
+  "name": "admin-dashboard",
   "version": "1.0.0",
-  "description": "An admin template based on iView",
-  "author": "",
+  "description": "An admin boilerplate based on element-ui",
+  "author": "No one",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
