--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "vue-cli-template-webpack",
+  "name": "vue-dashboard-template",
   "version": "1.3.1",
   "license": "MIT",
   "description": "A full-featured Webpack setup with hot-reload, lint-on-save, unit testing & css extraction.",
   "scripts": {
-    "docs": "cd docs && gitbook serve",
-    "docs:deploy": "bash ./deploy-docs.sh"
   },
   "devDependencies": {
     "vue-cli": "^2.8.1"
